--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/1.6"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/gdx-tilemap3d-libs"/>
-	<classpathentry kind="output" path="/out/production/gdx-tilemap3d"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
