--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,31 @@ ext.gdxVersion = "1.0.0"
 
 sourceCompatibility = 1.6
 
+configurations {
+    deployerJars
+}
+
 repositories {
 	mavenCentral()
 	maven { url "http://oss.sonatype.org/content/repositories/releases/" }
+    maven { url "http://maven.blarg.ca" }
 	mavenLocal()
 }
 
 dependencies {
 	compile "com.badlogicgames.gdx:gdx:$gdxVersion"
 	compile "ca.blarg.gdx:gdx-toolbox:0.1-SNAPSHOT"
+    deployerJars "org.apache.maven.wagon:wagon-ssh:2.2"
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        configuration = configurations.deployerJars
+        uniqueVersion = false
+        repository(url: mavenDeployUrl) {
+            authentication(userName: mavenDeployUser, privateKey: mavenDeployPrivateKeyFile)
+        }
+    }
 }
 
 eclipse.project {
