--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 
 		<gdx.version>1.0.0</gdx.version>
-		<gdx-toolbox.version>0.1-SNAPSHOT</gdx-toolbox.version>
+		<gdx-toolbox.version>0.1</gdx-toolbox.version>
 	</properties>
 
 	<dependencies>
@@ -28,7 +28,7 @@
 			<version>${gdx.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>ca.blarg.gdx</groupId>
+			<groupId>ca.blarg</groupId>
 			<artifactId>gdx-toolbox</artifactId>
 			<version>${gdx-toolbox.version}</version>
 		</dependency>
