--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>ca.blarg</groupId>
 	<artifactId>gdx-tilemap3d</artifactId>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 
 	<name>gdx-tilemap3d</name>
 	<description>Library to handle management and rendering of a game world composed of 3D "tiles" arranged in a uniform 3D grid, via libGDX.</description>
@@ -21,7 +21,7 @@
 		<url>git@github.com:gered/gdx-tilemap3d.git</url>
 		<connection>scm:git:${project.scm.url}</connection>
 		<developerConnection>scm:git:${project.scm.url}</developerConnection>
-		<tag>v0.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<developers>
