update to libgdx 1.7.0
not the most current version! have encountered some difficulty with
something 1.8.0+ which i've not yet resolved

--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,8 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<maven.compiler.source>1.6</maven.compiler.source>
 
-		<gdx.version>1.0.0</gdx.version>
-		<gdx-toolbox.version>0.1</gdx-toolbox.version>
+		<gdx.version>1.7.0</gdx.version>
+		<gdx-toolbox.version>0.2-SNAPSHOT</gdx-toolbox.version>
 	</properties>
 
 	<dependencies>
